--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,11 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    implementation "android.arch.persistence.room:rxjava2:1.0.0"
+    kapt "android.arch.persistence.room:compiler:1.0.0"
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+
     implementation 'com.google.android.gms:play-services-location:11.8.0'
 
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
