--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:name="be.simonraes.trainhome.TrainHomeApplication"
         android:theme="@style/AppTheme">
-        <activity android:name="be.simonraes.trainhome.MainActivity">
+        <activity android:name="be.simonraes.trainhome.home.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
