--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation "com.android.support:support-media-compat:$supportLibVersion"
     implementation "com.android.support:recyclerview-v7:$supportLibVersion"
 
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta4'
 
     implementation "android.arch.persistence.room:runtime:1.0.0"
     implementation "android.arch.persistence.room:rxjava2:1.0.0"
