--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxjava:2.1.8"
     implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
 
+    compile 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.1.0'
+
+
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
 
 
