--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,12 +27,14 @@ def supportLibVersion = '27.0.2'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
     implementation "com.android.support:support-v4:$supportLibVersion"
     implementation "com.android.support:appcompat-v7:$supportLibVersion"
     implementation "com.android.support:support-media-compat:$supportLibVersion"
     implementation "com.android.support:recyclerview-v7:$supportLibVersion"
+    implementation "com.android.support:design:$supportLibVersion"
 
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta4'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0-beta5'
 
     implementation "android.arch.persistence.room:runtime:1.0.0"
     implementation "android.arch.persistence.room:rxjava2:1.0.0"
@@ -44,14 +46,15 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 
-    implementation "io.reactivex.rxjava2:rxjava:2.1.8"
-    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+    implementation "io.reactivex.rxjava2:rxjava:2.1.9"
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
 
     compile 'com.jakewharton.rxbinding2:rxbinding-kotlin:2.1.0'
 
 
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.0'
 
 
     implementation 'com.google.dagger:dagger:2.14.1'
